set(CORE_FILES
${PROJECT_SOURCE_DIR}/core/analysis/Model.cpp
${PROJECT_SOURCE_DIR}/core/analysis/Model.h
${PROJECT_SOURCE_DIR}/core/analysis/mcmc/Mcmc.cpp
${PROJECT_SOURCE_DIR}/core/analysis/mcmc/Mcmc.h
${PROJECT_SOURCE_DIR}/core/analysis/mcmc/ParallelMcmcmc.cpp
${PROJECT_SOURCE_DIR}/core/analysis/mcmc/ParallelMcmcmc.h
${PROJECT_SOURCE_DIR}/core/analysis/mcmc/PowerPosteriorMcmc.cpp
${PROJECT_SOURCE_DIR}/core/analysis/mcmc/PowerPosteriorMcmc.h
${PROJECT_SOURCE_DIR}/core/analysis/mcmc/WangLandauMcmc.cpp
${PROJECT_SOURCE_DIR}/core/analysis/mcmc/WangLandauMcmc.h
${PROJECT_SOURCE_DIR}/core/analysis/mcmc/convergence/BurninEstimatorContinuous.cpp
${PROJECT_SOURCE_DIR}/core/analysis/mcmc/convergence/BurninEstimatorContinuous.h
${PROJECT_SOURCE_DIR}/core/analysis/mcmc/convergence/ConvergenceDiagnosticContinuous.cpp
${PROJECT_SOURCE_DIR}/core/analysis/mcmc/convergence/ConvergenceDiagnosticContinuous.h
${PROJECT_SOURCE_DIR}/core/analysis/mcmc/convergence/EssMax.cpp
${PROJECT_SOURCE_DIR}/core/analysis/mcmc/convergence/EssMax.h
${PROJECT_SOURCE_DIR}/core/analysis/mcmc/convergence/GelmanRubinTest.cpp
${PROJECT_SOURCE_DIR}/core/analysis/mcmc/convergence/GelmanRubinTest.h
${PROJECT_SOURCE_DIR}/core/analysis/mcmc/convergence/GewekeTest.cpp
${PROJECT_SOURCE_DIR}/core/analysis/mcmc/convergence/GewekeTest.h
${PROJECT_SOURCE_DIR}/core/analysis/mcmc/convergence/HeidelbergerWelchTest.cpp
${PROJECT_SOURCE_DIR}/core/analysis/mcmc/convergence/HeidelbergerWelchTest.h
${PROJECT_SOURCE_DIR}/core/analysis/mcmc/convergence/SemMin.cpp
${PROJECT_SOURCE_DIR}/core/analysis/mcmc/convergence/SemMin.h
${PROJECT_SOURCE_DIR}/core/analysis/mcmc/convergence/StationarityTest.cpp
${PROJECT_SOURCE_DIR}/core/analysis/mcmc/convergence/StationarityTest.h
${PROJECT_SOURCE_DIR}/core/analysis/mcmc/output/Sample.h
${PROJECT_SOURCE_DIR}/core/analysis/mcmc/output/Trace.cpp
${PROJECT_SOURCE_DIR}/core/analysis/mcmc/output/Trace.h
${PROJECT_SOURCE_DIR}/core/analysis/mcmc/output/TraceAnalysisContinuous.cpp
${PROJECT_SOURCE_DIR}/core/analysis/mcmc/output/TraceAnalysisContinuous.h
${PROJECT_SOURCE_DIR}/core/analysis/mcmc/output/TreeSummary.h
${PROJECT_SOURCE_DIR}/core/analysis/mcmc/output/TreeTrace.h
${PROJECT_SOURCE_DIR}/core/dag/ConstantNode.h
${PROJECT_SOURCE_DIR}/core/dag/DagNode.cpp
${PROJECT_SOURCE_DIR}/core/dag/DagNode.h
${PROJECT_SOURCE_DIR}/core/dag/DeterministicNodes/DeterministicNode.h
${PROJECT_SOURCE_DIR}/core/dag/DynamicNode.h
${PROJECT_SOURCE_DIR}/core/dag/StochasticNodes/ContinuousStochasticNode.cpp
${PROJECT_SOURCE_DIR}/core/dag/StochasticNodes/ContinuousStochasticNode.h
${PROJECT_SOURCE_DIR}/core/dag/StochasticNodes/StochasticNode.h
${PROJECT_SOURCE_DIR}/core/dag/TypedDagNode.h
${PROJECT_SOURCE_DIR}/core/datatypes/AbstractRbObject.h
${PROJECT_SOURCE_DIR}/core/datatypes/Cloneable.h
${PROJECT_SOURCE_DIR}/core/datatypes/Cloner.h
${PROJECT_SOURCE_DIR}/core/datatypes/RbConstIterator.h
${PROJECT_SOURCE_DIR}/core/datatypes/RbIterator.h
${PROJECT_SOURCE_DIR}/core/datatypes/RbVector.h
${PROJECT_SOURCE_DIR}/core/datatypes/TraitData.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/TraitData.h
${PROJECT_SOURCE_DIR}/core/datatypes/character/AminoAcidState.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/character/AminoAcidState.h
${PROJECT_SOURCE_DIR}/core/datatypes/character/CharacterState.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/character/CharacterState.h
${PROJECT_SOURCE_DIR}/core/datatypes/character/ContinuousCharacterState.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/character/ContinuousCharacterState.h
${PROJECT_SOURCE_DIR}/core/datatypes/character/DiscreteCharacterState.h
${PROJECT_SOURCE_DIR}/core/datatypes/character/DnaState.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/character/DnaState.h
${PROJECT_SOURCE_DIR}/core/datatypes/character/RnaState.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/character/RnaState.h
${PROJECT_SOURCE_DIR}/core/datatypes/character/StandardState.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/character/StandardState.h
${PROJECT_SOURCE_DIR}/core/datatypes/characterhistory/BranchHistory.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/characterhistory/BranchHistory.h
${PROJECT_SOURCE_DIR}/core/datatypes/characterhistory/CharacterEvent.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/characterhistory/CharacterEvent.h
${PROJECT_SOURCE_DIR}/core/datatypes/characterhistory/CharacterEventCompare.h
${PROJECT_SOURCE_DIR}/core/datatypes/math/CorrespondenceAnalysis.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/math/CorrespondenceAnalysis.h
${PROJECT_SOURCE_DIR}/core/datatypes/math/DualityDiagram.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/math/DualityDiagram.h
${PROJECT_SOURCE_DIR}/core/datatypes/math/MatrixComplex.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/math/MatrixComplex.h
${PROJECT_SOURCE_DIR}/core/datatypes/math/MatrixReal.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/math/MatrixReal.h
${PROJECT_SOURCE_DIR}/core/datatypes/math/TransitionProbabilityMatrix.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/math/TransitionProbabilityMatrix.h
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/AbstractCharacterData.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/AbstractCharacterData.h
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/AbstractTaxonData.h
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/CharacterData.h
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/DiscreteCharacterData.h
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/DistanceMatrix.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/DistanceMatrix.h
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/SnpData.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/SnpData.h
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/TaxonData.h
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/ratematrix/GeneralRateMatrix.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/ratematrix/GeneralRateMatrix.h
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix.h
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_Blosum62.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_Blosum62.h
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_CpRev.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_CpRev.h
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_Dayhoff.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_Dayhoff.h
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_Empirical.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_Empirical.h
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_F81.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_F81.h
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_GTR.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_GTR.h
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_HKY.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_HKY.h
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_JC.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_JC.h
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_Jones.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_Jones.h
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_LG.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_LG.h
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_MtMam.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_MtMam.h
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_MtRev24.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_MtRev24.h
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_RtRev.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_RtRev.h
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_Vt.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_Vt.h
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_Wag.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_Wag.h
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/ratematrix/TimeReversibleRateMatrix.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/phylogenetics/ratematrix/TimeReversibleRateMatrix.h
${PROJECT_SOURCE_DIR}/core/datatypes/trees/AdmixtureNode.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/trees/AdmixtureNode.h
${PROJECT_SOURCE_DIR}/core/datatypes/trees/AdmixtureTree.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/trees/AdmixtureTree.h
${PROJECT_SOURCE_DIR}/core/datatypes/trees/BranchLengthTree.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/trees/BranchLengthTree.h
${PROJECT_SOURCE_DIR}/core/datatypes/trees/Clade.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/trees/Clade.h
${PROJECT_SOURCE_DIR}/core/datatypes/trees/TimeTree.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/trees/TimeTree.h
${PROJECT_SOURCE_DIR}/core/datatypes/trees/Topology.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/trees/Topology.h
${PROJECT_SOURCE_DIR}/core/datatypes/trees/TopologyNode.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/trees/TopologyNode.h
${PROJECT_SOURCE_DIR}/core/datatypes/trees/Tree.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/trees/Tree.h
${PROJECT_SOURCE_DIR}/core/datatypes/trees/TreeChangeEventHandler.cpp
${PROJECT_SOURCE_DIR}/core/datatypes/trees/TreeChangeEventHandler.h
${PROJECT_SOURCE_DIR}/core/datatypes/trees/TreeChangeEventListener.h
${PROJECT_SOURCE_DIR}/core/distributions/DirichletProcessPriorDistribution.h
${PROJECT_SOURCE_DIR}/core/distributions/Distribution.cpp
${PROJECT_SOURCE_DIR}/core/distributions/Distribution.h
${PROJECT_SOURCE_DIR}/core/distributions/MixtureDistribution.h
${PROJECT_SOURCE_DIR}/core/distributions/RbMixtureDistribution.h
${PROJECT_SOURCE_DIR}/core/distributions/TypedDistribution.h
${PROJECT_SOURCE_DIR}/core/distributions/characterhistory/AbstractCharacterHistoryCtmc.cpp
${PROJECT_SOURCE_DIR}/core/distributions/characterhistory/AbstractCharacterHistoryCtmc.h
${PROJECT_SOURCE_DIR}/core/distributions/characterhistory/AbstractCharacterHistoryRateModifier.cpp
${PROJECT_SOURCE_DIR}/core/distributions/characterhistory/AbstractCharacterHistoryRateModifier.h
${PROJECT_SOURCE_DIR}/core/distributions/characterhistory/DispersalHistoryCtmc.cpp
${PROJECT_SOURCE_DIR}/core/distributions/characterhistory/DispersalHistoryCtmc.h
${PROJECT_SOURCE_DIR}/core/distributions/characterhistory/GeographicDistanceRateModifier.cpp
${PROJECT_SOURCE_DIR}/core/distributions/characterhistory/GeographicDistanceRateModifier.h
${PROJECT_SOURCE_DIR}/core/distributions/characterhistory/TreeCharacterHistory.cpp
${PROJECT_SOURCE_DIR}/core/distributions/characterhistory/TreeCharacterHistory.h
${PROJECT_SOURCE_DIR}/core/distributions/math/BernoulliDistribution.cpp
${PROJECT_SOURCE_DIR}/core/distributions/math/BernoulliDistribution.h
${PROJECT_SOURCE_DIR}/core/distributions/math/BetaDistribution.cpp
${PROJECT_SOURCE_DIR}/core/distributions/math/BetaDistribution.h
${PROJECT_SOURCE_DIR}/core/distributions/math/BinomialDistribution.cpp
${PROJECT_SOURCE_DIR}/core/distributions/math/BinomialDistribution.h
${PROJECT_SOURCE_DIR}/core/distributions/math/BrownianMotion.cpp
${PROJECT_SOURCE_DIR}/core/distributions/math/BrownianMotion.h
${PROJECT_SOURCE_DIR}/core/distributions/math/ContinuousDistribution.cpp
${PROJECT_SOURCE_DIR}/core/distributions/math/ContinuousDistribution.h
${PROJECT_SOURCE_DIR}/core/distributions/math/DirichletDistribution.cpp
${PROJECT_SOURCE_DIR}/core/distributions/math/DirichletDistribution.h
${PROJECT_SOURCE_DIR}/core/distributions/math/ExponentialDistribution.cpp
${PROJECT_SOURCE_DIR}/core/distributions/math/ExponentialDistribution.h
${PROJECT_SOURCE_DIR}/core/distributions/math/GammaDistribution.cpp
${PROJECT_SOURCE_DIR}/core/distributions/math/GammaDistribution.h
${PROJECT_SOURCE_DIR}/core/distributions/math/GeometricBrownianMotion.cpp
${PROJECT_SOURCE_DIR}/core/distributions/math/GeometricBrownianMotion.h
${PROJECT_SOURCE_DIR}/core/distributions/math/GeometricDistribution.cpp
${PROJECT_SOURCE_DIR}/core/distributions/math/GeometricDistribution.h
${PROJECT_SOURCE_DIR}/core/distributions/math/InverseGammaDistribution.cpp
${PROJECT_SOURCE_DIR}/core/distributions/math/InverseGammaDistribution.h
${PROJECT_SOURCE_DIR}/core/distributions/math/LognormalDistribution.cpp
${PROJECT_SOURCE_DIR}/core/distributions/math/LognormalDistribution.h
${PROJECT_SOURCE_DIR}/core/distributions/math/NormalDistribution.cpp
${PROJECT_SOURCE_DIR}/core/distributions/math/NormalDistribution.h
${PROJECT_SOURCE_DIR}/core/distributions/math/OffsetExponentialDistribution.cpp
${PROJECT_SOURCE_DIR}/core/distributions/math/OffsetExponentialDistribution.h
${PROJECT_SOURCE_DIR}/core/distributions/math/OneOverXDistribution.cpp
${PROJECT_SOURCE_DIR}/core/distributions/math/OneOverXDistribution.h
${PROJECT_SOURCE_DIR}/core/distributions/math/PoissonDistribution.cpp
${PROJECT_SOURCE_DIR}/core/distributions/math/PoissonDistribution.h
${PROJECT_SOURCE_DIR}/core/distributions/math/RandomWalkProcess.cpp
${PROJECT_SOURCE_DIR}/core/distributions/math/RandomWalkProcess.h
${PROJECT_SOURCE_DIR}/core/distributions/math/Skyline.cpp
${PROJECT_SOURCE_DIR}/core/distributions/math/Skyline.h
${PROJECT_SOURCE_DIR}/core/distributions/math/UniformDistribution.cpp
${PROJECT_SOURCE_DIR}/core/distributions/math/UniformDistribution.h
${PROJECT_SOURCE_DIR}/core/distributions/phylogenetics/AutocorrelatedBranchMatrixDistribution.cpp
${PROJECT_SOURCE_DIR}/core/distributions/phylogenetics/AutocorrelatedBranchMatrixDistribution.h
${PROJECT_SOURCE_DIR}/core/distributions/phylogenetics/AutocorrelatedLognormalRateDistribution.cpp
${PROJECT_SOURCE_DIR}/core/distributions/phylogenetics/AutocorrelatedLognormalRateDistribution.h
${PROJECT_SOURCE_DIR}/core/distributions/phylogenetics/admixture/AdmixtureConstantBirthDeathProcess.cpp
${PROJECT_SOURCE_DIR}/core/distributions/phylogenetics/admixture/AdmixtureConstantBirthDeathProcess.h
${PROJECT_SOURCE_DIR}/core/distributions/phylogenetics/admixture/BrownianMotionAdmixtureGraph.cpp
${PROJECT_SOURCE_DIR}/core/distributions/phylogenetics/admixture/BrownianMotionAdmixtureGraph.h
${PROJECT_SOURCE_DIR}/core/distributions/phylogenetics/substitution/AbstractSiteHomogeneousCharEvoModel.h
${PROJECT_SOURCE_DIR}/core/distributions/phylogenetics/substitution/AbstractSiteHomogeneousMixtureCharEvoModel.h
${PROJECT_SOURCE_DIR}/core/distributions/phylogenetics/substitution/BranchHeterogeneousCharEvoModel.h
${PROJECT_SOURCE_DIR}/core/distributions/phylogenetics/substitution/BranchRateTimeBHCharEvoModel.h
${PROJECT_SOURCE_DIR}/core/distributions/phylogenetics/substitution/GeneralBranchHeterogeneousCharEvoModel.h
${PROJECT_SOURCE_DIR}/core/distributions/phylogenetics/substitution/SimpleBranchRateTimeCharEvoModel.h
${PROJECT_SOURCE_DIR}/core/distributions/phylogenetics/substitution/SimpleSiteHeterogeneousMixtureCharEvoModel.h
${PROJECT_SOURCE_DIR}/core/distributions/phylogenetics/substitution/SimpleSiteHomogeneousCharEvoModel.h
${PROJECT_SOURCE_DIR}/core/distributions/phylogenetics/tree/ConstantBirthDeathProcess.cpp
${PROJECT_SOURCE_DIR}/core/distributions/phylogenetics/tree/ConstantBirthDeathProcess.h
${PROJECT_SOURCE_DIR}/core/distributions/phylogenetics/tree/ConstantPopulationCoalescent.cpp
${PROJECT_SOURCE_DIR}/core/distributions/phylogenetics/tree/ConstantPopulationCoalescent.h
${PROJECT_SOURCE_DIR}/core/distributions/phylogenetics/tree/MultispeciesCoalescent.cpp
${PROJECT_SOURCE_DIR}/core/distributions/phylogenetics/tree/MultispeciesCoalescent.h
${PROJECT_SOURCE_DIR}/core/distributions/phylogenetics/tree/TimeDependentBirthDeathProcess.cpp
${PROJECT_SOURCE_DIR}/core/distributions/phylogenetics/tree/TimeDependentBirthDeathProcess.h
${PROJECT_SOURCE_DIR}/core/distributions/phylogenetics/tree/UniformTopologyDistribution.cpp
${PROJECT_SOURCE_DIR}/core/distributions/phylogenetics/tree/UniformTopologyDistribution.h
${PROJECT_SOURCE_DIR}/core/functions/Function.cpp
${PROJECT_SOURCE_DIR}/core/functions/Function.h
${PROJECT_SOURCE_DIR}/core/functions/RbVectorFunction.h
${PROJECT_SOURCE_DIR}/core/functions/SimplexFunction.cpp
${PROJECT_SOURCE_DIR}/core/functions/SimplexFunction.h
${PROJECT_SOURCE_DIR}/core/functions/SimplexScaleFunction.cpp
${PROJECT_SOURCE_DIR}/core/functions/SimplexScaleFunction.h
${PROJECT_SOURCE_DIR}/core/functions/TypedFunction.h
${PROJECT_SOURCE_DIR}/core/functions/VectorFunction.h
${PROJECT_SOURCE_DIR}/core/functions/VectorIndexOperator.h
${PROJECT_SOURCE_DIR}/core/functions/builtin/EquationFunction.h
${PROJECT_SOURCE_DIR}/core/functions/builtin/GreaterEqualFunction.h
${PROJECT_SOURCE_DIR}/core/functions/builtin/GreaterThanFunction.h
${PROJECT_SOURCE_DIR}/core/functions/builtin/LessEqualFunction.h
${PROJECT_SOURCE_DIR}/core/functions/builtin/LessThanFunction.h
${PROJECT_SOURCE_DIR}/core/functions/builtin/LogicalAndFunction.cpp
${PROJECT_SOURCE_DIR}/core/functions/builtin/LogicalAndFunction.h
${PROJECT_SOURCE_DIR}/core/functions/builtin/LogicalOrFunction.cpp
${PROJECT_SOURCE_DIR}/core/functions/builtin/LogicalOrFunction.h
${PROJECT_SOURCE_DIR}/core/functions/builtin/LogicalUnotFunction.cpp
${PROJECT_SOURCE_DIR}/core/functions/builtin/LogicalUnotFunction.h
${PROJECT_SOURCE_DIR}/core/functions/builtin/MeanFunction.cpp
${PROJECT_SOURCE_DIR}/core/functions/builtin/MeanFunction.h
${PROJECT_SOURCE_DIR}/core/functions/builtin/NormalizeVectorFunction.cpp
${PROJECT_SOURCE_DIR}/core/functions/builtin/NormalizeVectorFunction.h
${PROJECT_SOURCE_DIR}/core/functions/builtin/NotEqualFunction.h
${PROJECT_SOURCE_DIR}/core/functions/continuous/ContinuousFunction.cpp
${PROJECT_SOURCE_DIR}/core/functions/continuous/ContinuousFunction.h
${PROJECT_SOURCE_DIR}/core/functions/continuous/IntegralFunction.cpp
${PROJECT_SOURCE_DIR}/core/functions/continuous/IntegralFunction.h
${PROJECT_SOURCE_DIR}/core/functions/continuous/bivariate/BinaryAddition.h
${PROJECT_SOURCE_DIR}/core/functions/continuous/bivariate/BinaryDivision.h
${PROJECT_SOURCE_DIR}/core/functions/continuous/bivariate/BinaryMultiplication.h
${PROJECT_SOURCE_DIR}/core/functions/continuous/bivariate/BinarySubtraction.h
${PROJECT_SOURCE_DIR}/core/functions/continuous/bivariate/PowerFunction.cpp
${PROJECT_SOURCE_DIR}/core/functions/continuous/bivariate/PowerFunction.h
${PROJECT_SOURCE_DIR}/core/functions/continuous/univariate/AbsoluteValueFunction.cpp
${PROJECT_SOURCE_DIR}/core/functions/continuous/univariate/AbsoluteValueFunction.h
${PROJECT_SOURCE_DIR}/core/functions/continuous/univariate/CeilFunction.cpp
${PROJECT_SOURCE_DIR}/core/functions/continuous/univariate/CeilFunction.h
${PROJECT_SOURCE_DIR}/core/functions/continuous/univariate/ExponentialFunction.cpp
${PROJECT_SOURCE_DIR}/core/functions/continuous/univariate/ExponentialFunction.h
${PROJECT_SOURCE_DIR}/core/functions/continuous/univariate/FloorFunction.cpp
${PROJECT_SOURCE_DIR}/core/functions/continuous/univariate/FloorFunction.h
${PROJECT_SOURCE_DIR}/core/functions/continuous/univariate/GeneralUnivariateFunction.cpp
${PROJECT_SOURCE_DIR}/core/functions/continuous/univariate/GeneralUnivariateFunction.h
${PROJECT_SOURCE_DIR}/core/functions/continuous/univariate/IntegrableFunction.h
${PROJECT_SOURCE_DIR}/core/functions/continuous/univariate/LnFunction.cpp
${PROJECT_SOURCE_DIR}/core/functions/continuous/univariate/LnFunction.h
${PROJECT_SOURCE_DIR}/core/functions/continuous/univariate/LogFunction.cpp
${PROJECT_SOURCE_DIR}/core/functions/continuous/univariate/LogFunction.h
${PROJECT_SOURCE_DIR}/core/functions/continuous/univariate/RoundFunction.cpp
${PROJECT_SOURCE_DIR}/core/functions/continuous/univariate/RoundFunction.h
${PROJECT_SOURCE_DIR}/core/functions/continuous/univariate/SqrtFunction.cpp
${PROJECT_SOURCE_DIR}/core/functions/continuous/univariate/SqrtFunction.h
${PROJECT_SOURCE_DIR}/core/functions/continuous/univariate/TruncateFunction.cpp
${PROJECT_SOURCE_DIR}/core/functions/continuous/univariate/TruncateFunction.h
${PROJECT_SOURCE_DIR}/core/functions/continuous/univariate/UnaryMinus.h
${PROJECT_SOURCE_DIR}/core/functions/continuous/univariate/UnivariateFunction.cpp
${PROJECT_SOURCE_DIR}/core/functions/continuous/univariate/UnivariateFunction.h
${PROJECT_SOURCE_DIR}/core/functions/continuous/univariate/distribution/*
${PROJECT_SOURCE_DIR}/core/functions/discrete/ConstantFunction.h
${PROJECT_SOURCE_DIR}/core/functions/discrete/DiscreteFunction.h
${PROJECT_SOURCE_DIR}/core/functions/discrete/univariate/ConstantStepFunction.cpp
${PROJECT_SOURCE_DIR}/core/functions/discrete/univariate/ConstantStepFunction.h
${PROJECT_SOURCE_DIR}/core/functions/discrete/univariate/LinearStepFunction.cpp
${PROJECT_SOURCE_DIR}/core/functions/discrete/univariate/LinearStepFunction.h
${PROJECT_SOURCE_DIR}/core/functions/discrete/univariate/StepFunction.cpp
${PROJECT_SOURCE_DIR}/core/functions/discrete/univariate/StepFunction.h
${PROJECT_SOURCE_DIR}/core/functions/distribution/CummulativeDistributionFunction.cpp
${PROJECT_SOURCE_DIR}/core/functions/distribution/CummulativeDistributionFunction.h
${PROJECT_SOURCE_DIR}/core/functions/distribution/DistributionConstructorFunction.h
${PROJECT_SOURCE_DIR}/core/functions/distribution/ProbabilityDensityFunction.h
${PROJECT_SOURCE_DIR}/core/functions/distribution/QuantileFunction.cpp
${PROJECT_SOURCE_DIR}/core/functions/distribution/QuantileFunction.h
${PROJECT_SOURCE_DIR}/core/functions/phylogenetics/AdmixtureEdgeCountPerBranch.cpp
${PROJECT_SOURCE_DIR}/core/functions/phylogenetics/AdmixtureEdgeCountPerBranch.h
${PROJECT_SOURCE_DIR}/core/functions/phylogenetics/CoalaFunction.cpp
${PROJECT_SOURCE_DIR}/core/functions/phylogenetics/CoalaFunction.h
${PROJECT_SOURCE_DIR}/core/functions/phylogenetics/F81RateMatrixFunction.cpp
${PROJECT_SOURCE_DIR}/core/functions/phylogenetics/F81RateMatrixFunction.h
${PROJECT_SOURCE_DIR}/core/functions/phylogenetics/GtrRateMatrixFunction.cpp
${PROJECT_SOURCE_DIR}/core/functions/phylogenetics/GtrRateMatrixFunction.h
${PROJECT_SOURCE_DIR}/core/functions/phylogenetics/HkyRateMatrixFunction.cpp
${PROJECT_SOURCE_DIR}/core/functions/phylogenetics/HkyRateMatrixFunction.h
${PROJECT_SOURCE_DIR}/core/functions/phylogenetics/JcRateMatrixFunction.cpp
${PROJECT_SOURCE_DIR}/core/functions/phylogenetics/JcRateMatrixFunction.h
${PROJECT_SOURCE_DIR}/core/functions/phylogenetics/MrcaFunction.h
${PROJECT_SOURCE_DIR}/core/functions/phylogenetics/NucleotideFrequenciesFromGcContentFunction.cpp
${PROJECT_SOURCE_DIR}/core/functions/phylogenetics/NucleotideFrequenciesFromGcContentFunction.h
${PROJECT_SOURCE_DIR}/core/functions/phylogenetics/Tamura92RateMatrixFunction.cpp
${PROJECT_SOURCE_DIR}/core/functions/phylogenetics/Tamura92RateMatrixFunction.h
${PROJECT_SOURCE_DIR}/core/functions/phylogenetics/TreeAssemblyFunction.cpp
${PROJECT_SOURCE_DIR}/core/functions/phylogenetics/TreeAssemblyFunction.h
${PROJECT_SOURCE_DIR}/core/io/ContinuousTraitDataReader.cpp
${PROJECT_SOURCE_DIR}/core/io/ContinuousTraitDataReader.h
${PROJECT_SOURCE_DIR}/core/io/FastaWriter.cpp
${PROJECT_SOURCE_DIR}/core/io/FastaWriter.h
${PROJECT_SOURCE_DIR}/core/io/NclReader.cpp
${PROJECT_SOURCE_DIR}/core/io/NclReader.h
${PROJECT_SOURCE_DIR}/core/io/NewickConverter.cpp
${PROJECT_SOURCE_DIR}/core/io/NewickConverter.h
${PROJECT_SOURCE_DIR}/core/io/PopulationDataReader.cpp
${PROJECT_SOURCE_DIR}/core/io/PopulationDataReader.h
${PROJECT_SOURCE_DIR}/core/io/RbErrorStream.cpp
${PROJECT_SOURCE_DIR}/core/io/RbErrorStream.h
${PROJECT_SOURCE_DIR}/core/io/UserInterface.cpp
${PROJECT_SOURCE_DIR}/core/io/UserInterface.h
${PROJECT_SOURCE_DIR}/core/math/EigenSystem.cpp
${PROJECT_SOURCE_DIR}/core/math/EigenSystem.h
${PROJECT_SOURCE_DIR}/core/math/RandomNumberFactory.cpp
${PROJECT_SOURCE_DIR}/core/math/RandomNumberFactory.h
${PROJECT_SOURCE_DIR}/core/math/RandomNumberGenerator.cpp
${PROJECT_SOURCE_DIR}/core/math/RandomNumberGenerator.h
${PROJECT_SOURCE_DIR}/core/math/RbMathCombinatorialFunctions.cpp
${PROJECT_SOURCE_DIR}/core/math/RbMathCombinatorialFunctions.h
${PROJECT_SOURCE_DIR}/core/math/RbMathFunctions.cpp
${PROJECT_SOURCE_DIR}/core/math/RbMathFunctions.h
${PROJECT_SOURCE_DIR}/core/math/RbMathGaussianElimination.cpp
${PROJECT_SOURCE_DIR}/core/math/RbMathGaussianElimination.h
${PROJECT_SOURCE_DIR}/core/math/RbMathHelper.cpp
${PROJECT_SOURCE_DIR}/core/math/RbMathHelper.h
${PROJECT_SOURCE_DIR}/core/math/RbMathLogic.cpp
${PROJECT_SOURCE_DIR}/core/math/RbMathLogic.h
${PROJECT_SOURCE_DIR}/core/math/RbMathMatrix.cpp
${PROJECT_SOURCE_DIR}/core/math/RbMathMatrix.h
${PROJECT_SOURCE_DIR}/core/math/RbMathVector.cpp
${PROJECT_SOURCE_DIR}/core/math/RbMathVector.h
${PROJECT_SOURCE_DIR}/core/math/RbStatisticsHelper.cpp
${PROJECT_SOURCE_DIR}/core/math/RbStatisticsHelper.h
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionBeta.cpp
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionBeta.h
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionBinomial.cpp
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionBinomial.h
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionCauchy.cpp
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionCauchy.h
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionChisq.cpp
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionChisq.h
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionDirichlet.cpp
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionDirichlet.h
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionExponential.cpp
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionExponential.h
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionF.cpp
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionF.h
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionGamma.cpp
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionGamma.h
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionGeometric.cpp
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionGeometric.h
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionInverseGamma.cpp
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionInverseGamma.h
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionLogistic.cpp
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionLogistic.h
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionLognormal.cpp
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionLognormal.h
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionMultinomial.cpp
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionMultinomial.h
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionNormal.cpp
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionNormal.h
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionPoisson.cpp
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionPoisson.h
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionUniform.cpp
${PROJECT_SOURCE_DIR}/core/math/distributions/DistributionUniform.h
${PROJECT_SOURCE_DIR}/core/math/integration/GslIntegrator.cpp
${PROJECT_SOURCE_DIR}/core/math/integration/GslIntegrator.h
${PROJECT_SOURCE_DIR}/core/math/integration/NumericalIntegration.h
${PROJECT_SOURCE_DIR}/core/math/integration/SimpsonsRule.cpp
${PROJECT_SOURCE_DIR}/core/math/integration/SimpsonsRule.h
${PROJECT_SOURCE_DIR}/core/math/integration/TrapezoidalRule.cpp
${PROJECT_SOURCE_DIR}/core/math/integration/TrapezoidalRule.h
${PROJECT_SOURCE_DIR}/core/monitors/ExtendedNewickTreeMonitor.cpp
${PROJECT_SOURCE_DIR}/core/monitors/ExtendedNewickTreeMonitor.h
${PROJECT_SOURCE_DIR}/core/monitors/FileMonitor.cpp
${PROJECT_SOURCE_DIR}/core/monitors/FileMonitor.h
${PROJECT_SOURCE_DIR}/core/monitors/ModelMonitor.cpp
${PROJECT_SOURCE_DIR}/core/monitors/ModelMonitor.h
${PROJECT_SOURCE_DIR}/core/monitors/Monitor.cpp
${PROJECT_SOURCE_DIR}/core/monitors/Monitor.h
${PROJECT_SOURCE_DIR}/core/monitors/PathSampleMonitor.cpp
${PROJECT_SOURCE_DIR}/core/monitors/PathSampleMonitor.h
${PROJECT_SOURCE_DIR}/core/monitors/ScreenMonitor.cpp
${PROJECT_SOURCE_DIR}/core/monitors/ScreenMonitor.h
${PROJECT_SOURCE_DIR}/core/monitors/admixture/AdmixtureBipartitionMonitor.cpp
${PROJECT_SOURCE_DIR}/core/monitors/admixture/AdmixtureBipartitionMonitor.h
${PROJECT_SOURCE_DIR}/core/monitors/admixture/AdmixtureBipartitionSummaryMonitor.cpp
${PROJECT_SOURCE_DIR}/core/monitors/admixture/AdmixtureBipartitionSummaryMonitor.h
${PROJECT_SOURCE_DIR}/core/monitors/admixture/AdmixtureResidualsMonitor.cpp
${PROJECT_SOURCE_DIR}/core/monitors/admixture/AdmixtureResidualsMonitor.h
${PROJECT_SOURCE_DIR}/core/monitors/admixture/ExtendedNewickAdmixtureTreeMonitor.cpp
${PROJECT_SOURCE_DIR}/core/monitors/admixture/ExtendedNewickAdmixtureTreeMonitor.h
${PROJECT_SOURCE_DIR}/core/moves/Move.cpp
${PROJECT_SOURCE_DIR}/core/moves/Move.h
${PROJECT_SOURCE_DIR}/core/moves/MoveSchedule.cpp
${PROJECT_SOURCE_DIR}/core/moves/MoveSchedule.h
${PROJECT_SOURCE_DIR}/core/moves/PseudoGibbsMetaMove.cpp
${PROJECT_SOURCE_DIR}/core/moves/PseudoGibbsMetaMove.h
${PROJECT_SOURCE_DIR}/core/moves/RandomMoveSchedule.cpp
${PROJECT_SOURCE_DIR}/core/moves/RandomMoveSchedule.h
${PROJECT_SOURCE_DIR}/core/moves/SequenctialMoveSchedule.cpp
${PROJECT_SOURCE_DIR}/core/moves/SequenctialMoveSchedule.h
${PROJECT_SOURCE_DIR}/core/moves/SingleRandomMoveSchedule.cpp
${PROJECT_SOURCE_DIR}/core/moves/SingleRandomMoveSchedule.h
${PROJECT_SOURCE_DIR}/core/moves/admixture/AdmixtureCPPRateScaleMove.cpp
${PROJECT_SOURCE_DIR}/core/moves/admixture/AdmixtureCPPRateScaleMove.h
${PROJECT_SOURCE_DIR}/core/moves/admixture/AdmixtureDelayDecrement.cpp
${PROJECT_SOURCE_DIR}/core/moves/admixture/AdmixtureDelayDecrement.h
${PROJECT_SOURCE_DIR}/core/moves/admixture/AdmixtureEdgeAdd.cpp
${PROJECT_SOURCE_DIR}/core/moves/admixture/AdmixtureEdgeAdd.h
${PROJECT_SOURCE_DIR}/core/moves/admixture/AdmixtureEdgeAddCladeResiduals.cpp
${PROJECT_SOURCE_DIR}/core/moves/admixture/AdmixtureEdgeAddCladeResiduals.h
${PROJECT_SOURCE_DIR}/core/moves/admixture/AdmixtureEdgeAddResidualWeights.cpp
${PROJECT_SOURCE_DIR}/core/moves/admixture/AdmixtureEdgeAddResidualWeights.h
${PROJECT_SOURCE_DIR}/core/moves/admixture/AdmixtureEdgeDivergenceMerge.cpp
${PROJECT_SOURCE_DIR}/core/moves/admixture/AdmixtureEdgeDivergenceMerge.h
${PROJECT_SOURCE_DIR}/core/moves/admixture/AdmixtureEdgeDivergenceSplit.cpp
${PROJECT_SOURCE_DIR}/core/moves/admixture/AdmixtureEdgeDivergenceSplit.h
${PROJECT_SOURCE_DIR}/core/moves/admixture/AdmixtureEdgeFNPR.cpp
${PROJECT_SOURCE_DIR}/core/moves/admixture/AdmixtureEdgeFNPR.h
${PROJECT_SOURCE_DIR}/core/moves/admixture/AdmixtureEdgeRemove.cpp
${PROJECT_SOURCE_DIR}/core/moves/admixture/AdmixtureEdgeRemove.h
${PROJECT_SOURCE_DIR}/core/moves/admixture/AdmixtureEdgeRemoveResidualWeights.cpp
${PROJECT_SOURCE_DIR}/core/moves/admixture/AdmixtureEdgeRemoveResidualWeights.h
${PROJECT_SOURCE_DIR}/core/moves/admixture/AdmixtureEdgeReplaceCladeResiduals.cpp
${PROJECT_SOURCE_DIR}/core/moves/admixture/AdmixtureEdgeReplaceCladeResiduals.h
${PROJECT_SOURCE_DIR}/core/moves/admixture/AdmixtureEdgeReplaceResidualWeights.cpp
${PROJECT_SOURCE_DIR}/core/moves/admixture/AdmixtureEdgeReplaceResidualWeights.h
${PROJECT_SOURCE_DIR}/core/moves/admixture/AdmixtureEdgeReversePolarity.cpp
${PROJECT_SOURCE_DIR}/core/moves/admixture/AdmixtureEdgeReversePolarity.h
${PROJECT_SOURCE_DIR}/core/moves/admixture/AdmixtureEdgeReweight.cpp
${PROJECT_SOURCE_DIR}/core/moves/admixture/AdmixtureEdgeReweight.h
${PROJECT_SOURCE_DIR}/core/moves/admixture/AdmixtureEdgeSlide.cpp
${PROJECT_SOURCE_DIR}/core/moves/admixture/AdmixtureEdgeSlide.h
${PROJECT_SOURCE_DIR}/core/moves/admixture/AdmixtureFixedNodeheightPruneRegraft.cpp
${PROJECT_SOURCE_DIR}/core/moves/admixture/AdmixtureFixedNodeheightPruneRegraft.h
${PROJECT_SOURCE_DIR}/core/moves/admixture/AdmixtureNarrowExchange.cpp
${PROJECT_SOURCE_DIR}/core/moves/admixture/AdmixtureNarrowExchange.h
${PROJECT_SOURCE_DIR}/core/moves/admixture/AdmixtureNearestNeighborInterchangeAndRateShift.cpp
${PROJECT_SOURCE_DIR}/core/moves/admixture/AdmixtureNearestNeighborInterchangeAndRateShift.h
${PROJECT_SOURCE_DIR}/core/moves/admixture/AdmixtureNodeTimeSlideBeta.cpp
${PROJECT_SOURCE_DIR}/core/moves/admixture/AdmixtureNodeTimeSlideBeta.h
${PROJECT_SOURCE_DIR}/core/moves/admixture/AdmixtureNodeTimeSlideUniform.cpp
${PROJECT_SOURCE_DIR}/core/moves/admixture/AdmixtureNodeTimeSlideUniform.h
${PROJECT_SOURCE_DIR}/core/moves/admixture/AdmixtureRateAgeBetaShift.cpp
${PROJECT_SOURCE_DIR}/core/moves/admixture/AdmixtureRateAgeBetaShift.h
${PROJECT_SOURCE_DIR}/core/moves/admixture/AdmixtureRootTimeSlide.cpp
${PROJECT_SOURCE_DIR}/core/moves/admixture/AdmixtureRootTimeSlide.h
${PROJECT_SOURCE_DIR}/core/moves/admixture/AdmixtureShiftNodeAgeAndRate.cpp
${PROJECT_SOURCE_DIR}/core/moves/admixture/AdmixtureShiftNodeAgeAndRate.h
${PROJECT_SOURCE_DIR}/core/moves/admixture/AdmixtureShiftTreeRates.cpp
${PROJECT_SOURCE_DIR}/core/moves/admixture/AdmixtureShiftTreeRates.h
${PROJECT_SOURCE_DIR}/core/moves/admixture/AdmixtureSubtreePruneRegraft.cpp
${PROJECT_SOURCE_DIR}/core/moves/admixture/AdmixtureSubtreePruneRegraft.h
${PROJECT_SOURCE_DIR}/core/moves/admixture/AdmixtureSubtreePruneRegraftAndRateShift.cpp
${PROJECT_SOURCE_DIR}/core/moves/admixture/AdmixtureSubtreePruneRegraftAndRateShift.h
${PROJECT_SOURCE_DIR}/core/moves/characterhistory/CharacterHistoryCtmcNodeUpdate.cpp
${PROJECT_SOURCE_DIR}/core/moves/characterhistory/CharacterHistoryCtmcNodeUpdate.h
${PROJECT_SOURCE_DIR}/core/moves/characterhistory/CharacterHistoryCtmcPathUpdate.cpp
${PROJECT_SOURCE_DIR}/core/moves/characterhistory/CharacterHistoryCtmcPathUpdate.h
${PROJECT_SOURCE_DIR}/core/moves/compound/CompoundMove.cpp
${PROJECT_SOURCE_DIR}/core/moves/compound/CompoundMove.h
${PROJECT_SOURCE_DIR}/core/moves/compound/RateAgeBetaShift.cpp
${PROJECT_SOURCE_DIR}/core/moves/compound/RateAgeBetaShift.h
${PROJECT_SOURCE_DIR}/core/moves/mixture/MixtureAllocationMove.h
${PROJECT_SOURCE_DIR}/core/moves/simple/BetaSimplexMove.cpp
${PROJECT_SOURCE_DIR}/core/moves/simple/BetaSimplexMove.h
${PROJECT_SOURCE_DIR}/core/moves/simple/CompletePathRescaleMove.cpp
${PROJECT_SOURCE_DIR}/core/moves/simple/CompletePathRescaleMove.h
${PROJECT_SOURCE_DIR}/core/moves/simple/PathResampleMove.cpp
${PROJECT_SOURCE_DIR}/core/moves/simple/PathResampleMove.h
${PROJECT_SOURCE_DIR}/core/moves/simple/PathValueScalingMove.cpp
${PROJECT_SOURCE_DIR}/core/moves/simple/PathValueScalingMove.h
${PROJECT_SOURCE_DIR}/core/moves/simple/ScaleMove.cpp
${PROJECT_SOURCE_DIR}/core/moves/simple/ScaleMove.h
${PROJECT_SOURCE_DIR}/core/moves/simple/SimpleMove.cpp
${PROJECT_SOURCE_DIR}/core/moves/simple/SimpleMove.h
${PROJECT_SOURCE_DIR}/core/moves/simple/SimplexMove.cpp
${PROJECT_SOURCE_DIR}/core/moves/simple/SimplexMove.h
${PROJECT_SOURCE_DIR}/core/moves/simple/SimplexSingleElementScale.cpp
${PROJECT_SOURCE_DIR}/core/moves/simple/SimplexSingleElementScale.h
${PROJECT_SOURCE_DIR}/core/moves/simple/SingleElementScaleMove.cpp
${PROJECT_SOURCE_DIR}/core/moves/simple/SingleElementScaleMove.h
${PROJECT_SOURCE_DIR}/core/moves/simple/SlidingMove.cpp
${PROJECT_SOURCE_DIR}/core/moves/simple/SlidingMove.h
${PROJECT_SOURCE_DIR}/core/moves/simple/SubtreePruneRegraft.cpp
${PROJECT_SOURCE_DIR}/core/moves/simple/SubtreePruneRegraft.h
${PROJECT_SOURCE_DIR}/core/moves/trees/FixedNodeheightPruneRegraft.cpp
${PROJECT_SOURCE_DIR}/core/moves/trees/FixedNodeheightPruneRegraft.h
${PROJECT_SOURCE_DIR}/core/moves/trees/NarrowExchange.cpp
${PROJECT_SOURCE_DIR}/core/moves/trees/NarrowExchange.h
${PROJECT_SOURCE_DIR}/core/moves/trees/NearestNeighborInterchange.cpp
${PROJECT_SOURCE_DIR}/core/moves/trees/NearestNeighborInterchange.h
${PROJECT_SOURCE_DIR}/core/moves/trees/NearestNeighborInterchange_nonClock.cpp
${PROJECT_SOURCE_DIR}/core/moves/trees/NearestNeighborInterchange_nonClock.h
${PROJECT_SOURCE_DIR}/core/moves/trees/NodeTimeSlideBeta.cpp
${PROJECT_SOURCE_DIR}/core/moves/trees/NodeTimeSlideBeta.h
${PROJECT_SOURCE_DIR}/core/moves/trees/NodeTimeSlideUniform.cpp
${PROJECT_SOURCE_DIR}/core/moves/trees/NodeTimeSlideUniform.h
${PROJECT_SOURCE_DIR}/core/moves/trees/RootTimeSlide.cpp
${PROJECT_SOURCE_DIR}/core/moves/trees/RootTimeSlide.h
${PROJECT_SOURCE_DIR}/core/moves/trees/SubtreeScale.cpp
${PROJECT_SOURCE_DIR}/core/moves/trees/SubtreeScale.h
${PROJECT_SOURCE_DIR}/core/moves/trees/TreeScale.cpp
${PROJECT_SOURCE_DIR}/core/moves/trees/TreeScale.h
${PROJECT_SOURCE_DIR}/core/moves/trees/WeightedNodeTimeSlide.cpp
${PROJECT_SOURCE_DIR}/core/moves/trees/WeightedNodeTimeSlide.h
${PROJECT_SOURCE_DIR}/core/ncl/ncl.h
${PROJECT_SOURCE_DIR}/core/ncl/nxsallocatematrix.h
${PROJECT_SOURCE_DIR}/core/ncl/nxsassumptionsblock.cpp
${PROJECT_SOURCE_DIR}/core/ncl/nxsassumptionsblock.h
${PROJECT_SOURCE_DIR}/core/ncl/nxsblock.cpp
${PROJECT_SOURCE_DIR}/core/ncl/nxsblock.h
${PROJECT_SOURCE_DIR}/core/ncl/nxscdiscretematrix.h
${PROJECT_SOURCE_DIR}/core/ncl/nxscharactersblock.cpp
${PROJECT_SOURCE_DIR}/core/ncl/nxscharactersblock.h
${PROJECT_SOURCE_DIR}/core/ncl/nxscxxdiscretematrix.cpp
${PROJECT_SOURCE_DIR}/core/ncl/nxscxxdiscretematrix.h
${PROJECT_SOURCE_DIR}/core/ncl/nxsdatablock.cpp
${PROJECT_SOURCE_DIR}/core/ncl/nxsdatablock.h
${PROJECT_SOURCE_DIR}/core/ncl/nxsdefs.h
${PROJECT_SOURCE_DIR}/core/ncl/nxsdiscretedatum.h
${PROJECT_SOURCE_DIR}/core/ncl/nxsdistancedatum.h
${PROJECT_SOURCE_DIR}/core/ncl/nxsdistancesblock.cpp
${PROJECT_SOURCE_DIR}/core/ncl/nxsdistancesblock.h
${PROJECT_SOURCE_DIR}/core/ncl/nxsexception.cpp
${PROJECT_SOURCE_DIR}/core/ncl/nxsexception.h
${PROJECT_SOURCE_DIR}/core/ncl/nxsmultiformat.cpp
${PROJECT_SOURCE_DIR}/core/ncl/nxsmultiformat.h
${PROJECT_SOURCE_DIR}/core/ncl/nxspublicblocks.cpp
${PROJECT_SOURCE_DIR}/core/ncl/nxspublicblocks.h
${PROJECT_SOURCE_DIR}/core/ncl/nxsreader.cpp
${PROJECT_SOURCE_DIR}/core/ncl/nxsreader.h
${PROJECT_SOURCE_DIR}/core/ncl/nxssetreader.cpp
${PROJECT_SOURCE_DIR}/core/ncl/nxssetreader.h
${PROJECT_SOURCE_DIR}/core/ncl/nxsstring.cpp
${PROJECT_SOURCE_DIR}/core/ncl/nxsstring.h
${PROJECT_SOURCE_DIR}/core/ncl/nxstaxaassociationblock.cpp
${PROJECT_SOURCE_DIR}/core/ncl/nxstaxaassociationblock.h
${PROJECT_SOURCE_DIR}/core/ncl/nxstaxablock.cpp
${PROJECT_SOURCE_DIR}/core/ncl/nxstaxablock.h
${PROJECT_SOURCE_DIR}/core/ncl/nxstoken.cpp
${PROJECT_SOURCE_DIR}/core/ncl/nxstoken.h
${PROJECT_SOURCE_DIR}/core/ncl/nxstreesblock.cpp
${PROJECT_SOURCE_DIR}/core/ncl/nxstreesblock.h
${PROJECT_SOURCE_DIR}/core/ncl/nxsunalignedblock.cpp
${PROJECT_SOURCE_DIR}/core/ncl/nxsunalignedblock.h
${PROJECT_SOURCE_DIR}/core/ncl/nxsutilcopy.h
${PROJECT_SOURCE_DIR}/core/phylogenetics/GtrRateMatrix.cpp
${PROJECT_SOURCE_DIR}/core/phylogenetics/GtrRateMatrix.h
${PROJECT_SOURCE_DIR}/core/statistics/admixture/AdmixtureTreeLengthStatistic.cpp
${PROJECT_SOURCE_DIR}/core/statistics/admixture/AdmixtureTreeLengthStatistic.h
${PROJECT_SOURCE_DIR}/core/statistics/admixture/BrownianMotionAdmixtureGraphResiduals.cpp
${PROJECT_SOURCE_DIR}/core/statistics/admixture/BrownianMotionAdmixtureGraphResiduals.h
${PROJECT_SOURCE_DIR}/core/statistics/admixture/TickFunction.cpp
${PROJECT_SOURCE_DIR}/core/statistics/admixture/TickFunction.h
${PROJECT_SOURCE_DIR}/core/statistics/admixture/TreeAdmixtureEventCount.cpp
${PROJECT_SOURCE_DIR}/core/statistics/admixture/TreeAdmixtureEventCount.h
${PROJECT_SOURCE_DIR}/core/statistics/tree/TmrcaStatistic.cpp
${PROJECT_SOURCE_DIR}/core/statistics/tree/TmrcaStatistic.h
${PROJECT_SOURCE_DIR}/core/statistics/tree/TreeHeightStatistic.cpp
${PROJECT_SOURCE_DIR}/core/statistics/tree/TreeHeightStatistic.h
${PROJECT_SOURCE_DIR}/core/statistics/tree/TreeLengthStatistic.h
${PROJECT_SOURCE_DIR}/core/utils/IsDerivedFrom.h
${PROJECT_SOURCE_DIR}/core/utils/RbConstants.h
${PROJECT_SOURCE_DIR}/core/utils/RbException.cpp
${PROJECT_SOURCE_DIR}/core/utils/RbException.h
${PROJECT_SOURCE_DIR}/core/utils/RbFileManager.cpp
${PROJECT_SOURCE_DIR}/core/utils/RbFileManager.h
${PROJECT_SOURCE_DIR}/core/utils/RbOptions.h
${PROJECT_SOURCE_DIR}/core/utils/RbSettings.cpp
${PROJECT_SOURCE_DIR}/core/utils/RbSettings.h
${PROJECT_SOURCE_DIR}/core/utils/RbUtil.cpp
${PROJECT_SOURCE_DIR}/core/utils/RbUtil.h
${PROJECT_SOURCE_DIR}/core/utils/StringUtilities.cpp
${PROJECT_SOURCE_DIR}/core/utils/StringUtilities.h
${PROJECT_SOURCE_DIR}/core/utils/TreeUtilities.cpp
${PROJECT_SOURCE_DIR}/core/utils/TreeUtilities.h
core
)
add_library(rb-core ${CORE_FILES})
